--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
       color: #3b2f1c;
       border-radius: 0;
       overflow: auto;
+	  
     }
+	
+	.parchment-box p {
+	  margin-top: 4px;
+	  margin-bottom: 4px;
+	  margin: 4px 0;
+	  line-height: 1.2;
+
+	}
 	
 	/* Default font size */
 	#inputText,
@@ -83,7 +92,7 @@
 	    font-size: 40px;
 	  }
 	}
-	
+			
   </style>
 </head>
 
@@ -92,7 +101,10 @@
 <div class="parchment-box">
 
 <h1>🔡 First Letter Text Tool</h1>
+<p>An app to help you stored up God's word in your heart.</p> 
+<p>Read it, hear it, or use the First Letter to make it stick..</p>
 <p>Enter bible reference or paste your text below and click "Generate" to show only the first letter of each word.</p>
+
 
 <label for="bibleRef">Enter Bible Reference:</label>
 <input type="text" id="bibleRef" style="height: 24px;" placeholder="e.g., John 3:16">
@@ -119,7 +131,7 @@
   <button onclick="readText()">Read Input</button>
 </div>
 
-<h3>Output:</h3>
+<h3>First Letter:</h3>
 <div id="output"></div>
 <div id="copyStatus"></div>
 
