--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 <div id="copyStatus"></div>
 
 <footer style="font-size: 0.75em; margin-top: 2em; color: #555;">
-Scripture quotations are from the ESV® Bible (The Holy Bible, English Standard Version®), © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by permission. All rights reserved. The ESV text may not be quoted in any publication made available to the public by a Creative Commons license. The ESV may not be translated into any other language.
+Scripture quotations are from the ESV® Bible (The Holy Bible, English Standard Version®), © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by permission. All rights reserved. 
+07/13/2025 Application developed by G Chu. Please send any comment and suggestion to ampelos79@gmail.com
 </footer>
 
 
