--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 <h1>🔡 First Letter Text Tool</h1>
 <p>An app to help you stored up God's word in your heart.</p> 
-<p>Read it, hear it, or use the First Letter to make it stick..</p>
+<p>Read it, hear it, print it, memorize it and use the First Letter to make it stick..</p>
 <p>Enter bible reference or paste your text below and click "Generate" to show only the first letter of each word.</p>
 
 
