--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 		left: 0;
 		width: 100%;
 	  }
+
+	  .card {
+		max-width: 100%;
+		padding: 1rem;
+		margin: 0;
+		box-shadow: none;
+	  }
+	  
 	}
  
 
