--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 	@media print {
 	  body, html {
 		visibility: hidden;
-    margin: 0;
-    padding: 0;
-    background: none !important;		
+		margin: 0;
+		padding: 0;
+		background: none !important;		
 	  }
 	  #outputCard, #outputCard * {
 		visibility: visible;
@@ -136,23 +136,27 @@
 		width: 100%;
 	  }
 
-  .parchment-box {
-    background: none !important;
-    border: none !important;
-    padding: 0 !important;
-    width: auto !important;
-    height: auto !important;
-    box-shadow: none !important;
-    overflow: visible !important;
-  }
+	  .parchment-box {
+		background: none !important;
+		border: none !important;
+		padding: 0 !important;
+		width: auto !important;
+		height: auto !important;
+		box-shadow: none !important;
+		overflow: visible !important;
+	  }
 
-  .card {
-    max-width: 100% !important;
-    width: 100% !important;
-    margin: 0 auto !important;
-    padding: 1rem !important;
-    box-shadow: none !important;
-  }
+	  .card {
+		max-width: 100% !important;
+		width: 100% !important;
+		margin: 0 auto !important;
+		padding: 1rem !important;
+		box-shadow: none !important;
+	  }
+	  
+	  @page {
+		margin: 0.5in;
+	  }	  
 	  
 	}
  
