--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
 <p>Read it, hear it, print it, memorize it and use the First Letter to make it stick..</p>
 <p>Enter bible reference or paste your text below and click "Generate" to show only the first letter of each word.</p>
 
-
 <label for="bibleRef">Enter Bible Reference:</label>
 <input type="text" id="bibleRef" style="height: 24px;" placeholder="e.g., John 3:16">
 <button onclick="fetchBibleText()">ESV</button>
@@ -246,7 +245,7 @@
 	  Uncheck the Page Options as shown.<br/>
 	  Copy the NIV text and paste into the "Paste your text below:" box.<br/>
       Make sure the first line is the title. Adjust/add as needed.
-      <img src=gear.jpeg alt="Tooltip" />
+      <img src=gear.JPEG alt="Tooltip" />
     </div>
   </div>
 
